...
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

            <EditText
                android:id="@+id/edit_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title_hint"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
...
                android:text="@={viewmodel.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/edit_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:imeOptions="flagNoExtractUi"
...
