...
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/padding_medium"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/padding_medium">

        <CheckBox
            android:id="@+id/check_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{task.completed}"
            android:onClick="@{(view) -> listener.onCompleteChanged(task, view)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@{task.titleForList}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
...
