...
    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.piotrek1543.example.todoapp.ui.taskdetail.TaskDetailFragment"
        android:label="Task Details">
        <action
            android:id="@+id/action_taskDetailFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <argument
            android:name="TASK_ID"
            app:argType="string" />
        <action
            android:id="@+id/action_taskDetailFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
...
